--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <section>
+        <div class="container-fluid">
+            <div id="book">
+                <h2>BOOKPAGE AND REVIEW</h2>
+            </div>
+            
+        </div>
+    </section>
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
