--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img id="img1" src="img/slide1.jpeg" alt="Los Angeles" style="width:100%;">
+          <img class="img1" src="img/slide4.webp" alt="Los Angeles" style="width:100%;">
         </div>
 
         <div class="item">
-          <img id="img2" src="img/slide2.jpeg" alt="Chicago" style="width:100%;">
+          <img id="img2" src="img/books-library.jpg" alt="Chicago" style="width:100%;">
         </div>
 
         <div class="item">
-          <img id="img3" src="img/slide3.jpeg" alt="New york" style="width:100%;">
+          <img id="img3" src="img/best-book-review-sites.png" alt="New york" style="width:100%;">
         </div>
       </div>
 
