add final edits

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         </div>
 
         <div class="item">
-          <img id="img2" src="img/books-library.jpg" alt="Chicago" style="width:100%;">
+          <img id="img2" src="img/slide 1.png" alt="Chicago" style="width:100%;">
         </div>
 
         <div class="item">
-          <img id="img3" src="img/best-book-review-sites.png" alt="New york" style="width:100%;">
+          <img id="img3" src="img/books-library.jpg" alt="New york" style="width:100%;">
         </div>
       </div>
 
@@ -51,12 +51,18 @@
   <!-- about section -->
   <div class="about">
     <h1>About Us</h1>
-    <p>We are all very different. We were born in different cities, at different times,
-    <p>we love different music, food, movies. But we have something that unites us all</p>
-    <p>and that is a good story and we are at its heart. At BOOK REVIEWS we not only </p>
-    <p> score different stories but also have engaging conversations with our valued clients</p>
-    <p> making you part of this whole experience.</p>
-    </p>
+    <p>Nobody likes to spend money on a new book only to face that overwhelming feeling of
+      disappointment when it doesn’t live up to your expectations. The solution is to check
+      out a few book review sites before you hit the shops. The greater the diversity of opinions
+      you can gather, the more confidence you can have that you’ll enjoy the title.</p>
+      <p>Goodreads is arguably the leading online community for book lovers. If you want
+        some inspiration for which book to read next, this is the site to visit.
+        There’s an endless number of user-generated reading lists to explore, and Goodreads
+        itself publishes dozens of “best of” lists across a number of categories. You can also
+        join book discussions and reading groups with thousands of members.</p>
+        <p> You can participate in the community by adding your own rankings to books you’ve
+          read and leaving reviews for other people to check out. Occasionally, there are even
+          bonus events like question and answer session with authors.</p>
   </div>
 
 </body>
