fixing layout alignment

--- a/index.html
+++ b/index.html
@@ -1,11 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html>
+    <head>
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+        <link href="css/bootstrap.css">
+        <link href="css/styles.css" type="text/css" rel="stylesheet">
+    </head>
+    <body>
+        <h2> SOME OF THE BOOOKS THAT CAN BE FOUND IN OUR REVIEWS</h2>
+        <div class="gallery"> 
+            <div class="row1">
+            <div class="column1">
+                <div id="work">
+                    <div class="work5">
+                <div class="image1">
+                <img src="img/me.jpg" width="90%" class="image">
+                <div class="overlay">
+                    <div class="text">
+                        ME BEFORE YOU
+                    </div>
+                </div>
+                </div>
+                </div>
+                </div>
+            </div>
+            <div class="column1"> 
+                <div id="work">
+                    <div class="work6">
+                <div class="image1">
+                <img src="img/our.jpg" width="90%" class="image">
+                <div class="overlay">
+                    <div class="text">
+                    THE FAULT IN OUR STARS                    </div>
+                </div>
+                </div>
+                </div>
+                </div>
+            </div>
+            <div class="column1">
+                <div id="work">
+                    <div class="work7">
+                <div class="image1">
+                <img src="img/girl.jpg" width="95%" class="image">
+                <div class="overlay">
+                    <div class="text">
+                    GONE GIRL                    </div>
+                </div>
+                </div>
+                </div>
+                </div>
+            </div>
+    </div>
+    <div class="row1">
+        <div class="column1">
+            <div id="work">
+                <div class="work1">
+            <div class="image1">
+            <img src="img/man.jpg" width="90%" class="image"> 
+            <div class="overlay">
+            <div class="text">
+              MEMORY MAN            </div>
+            </div>
+            </div>
+            </div>
+        </div>
+    </div>
+    <div class="column1">
+        <div id="work">
+            <div class="work2" class="image">
+        <div class="image1">
+        <img src="img/far.jpg" width="90%">
+        <div class="overlay">
+        <div class="text">
+         FAR FROM THE MADDING CROWD        </div>
+        </div>
+        </div>
+        </div>
+    </div>
+    </div>
+    <div class="column1">
+        <div id="work">
+            <div class="work3">
+        <div class="image1">
+        <img src="img/town.jpg" width="90%"class="image">
+        <div class="overlay">
+        <div class="text">
+            PAPER TOWN        </div>
+        </div>
+        </div>
+        </div>
+    </div>
+    </div>
     
-</body>
+</div>
+  
+
+<button type="button" class="btn btn-link">Review More Books</button>
+
+    </body>
 </html>
