layout sucessfully aligned

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     </div>
     <div class="column1">
         <div id="work">
-            <div class="work2" class="image">
+            <div class="work2">
         <div class="image1">
-        <img src="img/far.jpg" width="90%">
+        <img src="img/far.jpg" width="90%" class="image">
         <div class="overlay">
         <div class="text">
          FAR FROM THE MADDING CROWD        </div>
