begin test of buttons

--- a/books.html
+++ b/books.html
@@ -4,83 +4,133 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Owl-carousel Cards Slider | CodingNepal</title>
+  <title>Books Reviews</title>
   <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css//books.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/books.css">
   <script src="js/jquery-3.5.1.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
   <link rel="stylesheet" href="js/books.js">
 </head>
 
 <body>
 
-<div class=" container bg-info my-3">
-  <div class="slider owl-carousel p-1 my-2">
+  <div class=" container bg-info my-3">
 
-    <div class="card">
-      <!-- <div class="img">
+    <section class="horror mt-3">
+      <div class="card-deck">
+        <div class="card">
+          <img src="img/horror/craven-manor.jpg" class="card-img-top" alt="Craven Manor">
+          <div class="card-body">
+            <h5 class="card-title">Craven Manor</h5>
+            <p class="card-title">Author</p>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content.</p>
+            <button class="btn btn-primary" id="craven">Review</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/horror/She-Lies-in-Wait.jpg" class="card-img-top" alt="She Lies in Wait">
+          <div class="card-body">
+            <h5 class="card-title">She Lies in Wait</h5>
+            <p class="card-title">Author</p>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+              content.</p>
+            <button class="btn btn-primary" id="sheLies">Review</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/horror/the-deep.jpg" class="card-img-top" alt="The Deep">
+          <div class="card-body">
+            <h5 class="card-title">The Deep</h5>
+            <p class="card-title">Author</p>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <button class="btn btn-primary" id="theDeep">Review</button>
+          </div>
+        </div>
+        <div class="card">
+          <img src="img/horror/the-shining-king.jpg" class="card-img-top" alt="The Shining">
+          <div class="card-body">
+            <h5 class="card-title">The Shining</h5>
+            <p class="card-title" id="king">Stephen King</p>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
+              content.</p>
+            <button class="btn btn-primary" id="theShining">Review</button>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <div class="text-center slider owl-carousel p-1 my-2">
+
+      <div class="card">
+        <!-- <div class="img">
         <img src="profile-1.jpeg" alt="">
       </div> -->
-      <div class="content">
-        <div class="title">
-          Andrew Mathenge</div>
-        <div class="sub-title">
-          Book Title
+        <div class="content">
+          <div class="title">
+            Andrew Mathenge</div>
+          <div class="sub-title">
+            Book Title
+          </div>
+          <p class="limit">Oh! My, Spy work was dope! The author never fails to surprise, esp the part where the
+            antagonist turns on his own family.</p>
         </div>
-        <p class="limit">Oh! My, Spy work was dope! The author never fails to surprise, esp the part where the antagonist turns on his own family.</p>
       </div>
-    </div>
 
-    <div class="card">
-      <!-- <div class="img">
+      <div class="card">
+        <!-- <div class="img">
         <img src="profile-2.jpeg" alt="">
       </div> -->
-      <div class="content">
-        <div class="title">
-          Casey Ann
+        <div class="content">
+          <div class="title">
+            Casey Ann
+          </div>
+          <div class="sub-title">
+            Book Title
+          </div>
+          <p class="limit">Oh! My, Spy work was dope! sdfghjkehgjkewhgjsadfghesrdyuwqertyuewrtyu The author never fails
+            to surprise, esp the part where the antagonist turns on his own family.</p>
         </div>
-        <div class="sub-title">
-          Book Title
-        </div>
-        <p class="limit">Oh! My, Spy work was dope! The author never fails to surprise, esp the part where the antagonist turns on his own family.</p>
       </div>
-    </div>
 
-    <div class="card">
-      <!-- <div class="img">
+      <div class="card">
+        <!-- <div class="img">
         <img src="profile-3.jpeg" alt="">
       </div> -->
-      <div class="content">
-        <div class="title">
-          Aoko Mercyline
+        <div class="content">
+          <div class="title">
+            Aoko Mercyline
+          </div>
+          <div class="sub-title">
+            Book Title
+          </div>
+          <p class="limit">Oh! My, Spy work was dope! The author never fails to surprise, esp the part where the
+            antagonist turns on his own family.</p>
         </div>
-        <div class="sub-title">
-          Book Title
-        </div>
-        <p class="limit">Oh! My, Spy work was dope! The author never fails to surprise, esp the part where the antagonist turns on his own family.</p>
       </div>
-    </div>
 
-    <div class="card">
-      <!-- <div class="img">
+      <div class="card">
+        <!-- <div class="img">
         <img src="profile-3.jpeg" alt="">
       </div> -->
-      <div class="content">
-        <div class="title">
-          Mbaya ziii
+        <div class="content">
+          <div class="title">
+            Mbaya ziii
+          </div>
+          <div class="sub-title">
+            lupe dupre
+          </div>
+          <p class="limit">Oh! My, Spy work was dope! The author never fails to surprise, esp the part where the
+            antagonist turns on his own family.</p>
         </div>
-        <div class="sub-title">
-          lupe dupre
-        </div>
-        <p class="limit">Oh! My, Spy work was dope! The author never fails to surprise, esp the part where the antagonist turns on his own family.</p>
       </div>
+
     </div>
 
   </div>
 
-</div>
-  
   <script>
     $(".slider").owlCarousel({
       loop: true,
