made chandes on the fonts and changed the images

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Font+Name">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -24,15 +25,15 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img class="img1" src="img/slide4.webp" alt="Los Angeles" style="width:100%;">
+          <img src="img/slide4.webp" alt="Los Angeles" style="width:100%;">
         </div>
 
         <div class="item">
-          <img id="img2" src="img/slide 1.png" alt="Chicago" style="width:100%;">
+          <img src="img/books-library.jpg" alt="Chicago" style="width:100%;">
         </div>
 
         <div class="item">
-          <img id="img3" src="img/books-library.jpg" alt="New york" style="width:100%;">
+          <img src="img/slide7.jpg" alt="New york" style="width:100%;">
         </div>
       </div>
 
@@ -55,9 +56,9 @@
       disappointment when it doesn’t live up to your expectations. The solution is to check
       out a few book review sites before you hit the shops. The greater the diversity of opinions
       you can gather, the more confidence you can have that you’ll enjoy the title.</p>
-      <p>Goodreads is arguably the leading online community for book lovers. If you want
+      <p><strong>Whispering Stories</strong> is arguably the leading online community for book lovers. If you want
         some inspiration for which book to read next, this is the site to visit.
-        There’s an endless number of user-generated reading lists to explore, and Goodreads
+        There’s an endless number of user-generated reading lists to explore, and <strong>Whispering Stories</strong>
         itself publishes dozens of “best of” lists across a number of categories. You can also
         join book discussions and reading groups with thousands of members.</p>
         <p> You can participate in the community by adding your own rankings to books you’ve
