small novel descriptions

--- a/books.html
+++ b/books.html
@@ -23,9 +23,8 @@
           <img src="img/horror/craven-manor.jpg" class="card-img-top" alt="Craven Manor">
           <div class="card-body">
             <h5 class="card-title">Craven Manor</h5>
-            <p class="card-title">Author</p>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content.</p>
+            <p class="card-title">Darcy Coates</p>
+            <p class="card-text">Some secrets are better left... Daniel is desperate for a fresh start. So when a mysterious figure slides a note under his door offering the position of groundskeeper at an ancient estate, he leaps at the chance, even though it seems too good to be true.</p>
             <button class="btn btn-primary" id="craven">Review</button>
           </div>
         </div>
@@ -33,9 +32,8 @@
           <img src="img/horror/She-Lies-in-Wait.jpg" class="card-img-top" alt="She Lies in Wait">
           <div class="card-body">
             <h5 class="card-title">She Lies in Wait</h5>
-            <p class="card-title">Author</p>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-              content.</p>
+            <p class="card-title">Gytha Lodge</p>
+            <p class="card-text">On a hot July night in 1983, six school friends go camping in the forest. Bright and brilliant, they are destined for great things, and young Aurora Jackson is dazzled to be allowed to tag along. Thirty years later, a body is discovered</p>
             <button class="btn btn-primary" id="sheLies">Review</button>
           </div>
         </div>
@@ -43,8 +41,8 @@
           <img src="img/horror/the-deep.jpg" class="card-img-top" alt="The Deep">
           <div class="card-body">
             <h5 class="card-title">The Deep</h5>
-            <p class="card-title">Author</p>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-title">Alma Katsu</p>
+            <p class="card-text">Octavia E. Butler meets Marvel’s Black Panther in The Deep, a story rich with Afrofuturism, folklore, and the power of memory, inspired by the Hugo Award–nominated song “The Deep” from Daveed Diggs’s rap group Clipping</p>
             <button class="btn btn-primary" id="theDeep">Review</button>
           </div>
         </div>
@@ -53,8 +51,7 @@
           <div class="card-body">
             <h5 class="card-title">The Shining</h5>
             <p class="card-title" id="king">Stephen King</p>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-              content.</p>
+            <p class="card-text">The Shining is a horror novel by American author Stephen King. Published in 1977, it is King's third published novel and first hardback bestseller: the success of the book firmly established King as a preeminent author in the horror genre.</p>
             <button class="btn btn-primary" id="theShining">Review</button>
           </div>
         </div>
