--- a/books.html
+++ b/books.html
@@ -90,9 +90,9 @@
 
     </section>
 
-    <div class="text-center slider owl-carousel p-1 my-2">
-
-      <div class="card">
+    <div class="d-flex flex-wrap text-center revWrite">
+      
+      <div class="card m-1">
         <div class="content">
           <div class="title">
             Andrew Mathenge</div>
@@ -104,57 +104,12 @@
         </div>
       </div>
 
-      <div class="card">
-        <div class="content">
-          <div class="title">
-            Casey Ann
-          </div>
-          <div class="sub-title">
-            Book Title
-          </div>
-          <p class="limit">Oh! My, Spy work was dope! sdfghjkehgjkewhgjsadfghesrdyuwqertyuewrtyu The author never fails
-            to surprise, esp the part where the antagonist turns on his own family.</p>
-        </div>
-      </div>
 
-      <div class="card">
-        <div class="content">
-          <div class="title">
-            Aoko Mercyline
-          </div>
-          <div class="sub-title">
-            Book Title
-          </div>
-          <p class="limit">Oh! My, Spy work was dope! The author never fails to surprise, esp the part where the
-            antagonist turns on his own family.</p>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="content">
-          <div class="title">
-            Mbaya ziii
-          </div>
-          <div class="sub-title">
-            lupe dupre
-          </div>
-          <p class="limit">Oh! My, Spy work was dope! The author never fails to surprise, esp the part where the
-            antagonist turns on his own family.</p>
-        </div>
-      </div>
 
     </div>
 
   </div>
 
-  <script>
-    $(".slider").owlCarousel({
-      loop: true,
-      // autoplay: true,
-      // autoplayTimeout: 2000, //2000ms = 2s;
-      autoplayHoverPause: true,
-    });
-  </script>
 
 </body>
 
