--- a/books.html
+++ b/books.html
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="img/horror/the-deep.jpg" id="deepHover" class="card-img-top" alt="The Deep"
+          <img src="img/horror/the-deep.jpg" class="card-img-top" alt="The Deep"
               data-toggle="tooltip" data-placement="top" title="Octavia E. Butler meets Marvel’s Black Panther in The Deep, a story rich with Afrofuturism, folklore, and the power of memory, inspired by the Hugo Award–nominated song “The Deep” from Daveed Diggs’s rap group Clipping">
           <div class="card-body">
             <h5 class="card-title deepTitle">The Deep</h5>
@@ -71,19 +71,64 @@
       </div>
 
       <div class=" my-2 bg-info text-dark p-2">
-        <form class="bookReview">
+        <form id="cravenReview">
           <div class="form-group">
             <label>Enter Your name</label>
-            <input type="text" class="form-control nameComment" placeholder="Enter Name">
-            <small id="nameCommentHelp" class="form-text text-muted">Nicknames and Pen Names also allowed</small>
+            <input type="text" class="form-control" id="cravenNameComment" placeholder="Enter Name">
+            <small class="form-text text-muted">Nicknames and Pen Names also allowed</small>
           </div>
           <div class="form-group">
             <label>Type your Review/Comment</label>
-            <textarea class="form-control reviewComment" rows="3" maxlength="300" placeholder="Enter Review/Comment (max 300 characters)" required></textarea>
+            <textarea class="form-control" id="cravenReviewComment" rows="3" maxlength="300" placeholder="Enter Review/Comment (max 300 characters)" required></textarea>
           </div>
           <div class=" text-center">
-            <button type="submit" class="btn btn-success p-2 mx-2" id="horrorSubmit">Submit</button>
-            <button type="reset" class="btn btn-danger p-2 mx-2" id="horrorReset">Cancel</button>
+            <button type="submit" class="btn btn-success p-2 mx-2" id="cravenSubmit">Submit</button>
+            <button type="reset" class="btn btn-danger p-2 mx-2" id="cravenReset">Cancel</button>
+          </div>
+        </form>
+        <form id="liesReview">
+          <div class="form-group">
+            <label>Enter Your name</label>
+            <input type="text" class="form-control" id="liesNameComment" placeholder="Enter Name">
+            <small class="form-text text-muted">Nicknames and Pen Names also allowed</small>
+          </div>
+          <div class="form-group">
+            <label>Type your Review/Comment</label>
+            <textarea class="form-control" id="liesReviewComment" rows="3" maxlength="300" placeholder="Enter Review/Comment (max 300 characters)" required></textarea>
+          </div>
+          <div class=" text-center">
+            <button type="submit" class="btn btn-success p-2 mx-2" id="liesSubmit">Submit</button>
+            <button type="reset" class="btn btn-danger p-2 mx-2" id="liesReset">Cancel</button>
+          </div>
+        </form>
+        <form id="deepReview">
+          <div class="form-group">
+            <label>Enter Your name</label>
+            <input type="text" class="form-control" id="deepNameComment" placeholder="Enter Name">
+            <small class="form-text text-muted">Nicknames and Pen Names also allowed</small>
+          </div>
+          <div class="form-group">
+            <label>Type your Review/Comment</label>
+            <textarea class="form-control" id="deepReviewComment" rows="3" maxlength="300" placeholder="Enter Review/Comment (max 300 characters)" required></textarea>
+          </div>
+          <div class=" text-center">
+            <button type="submit" class="btn btn-success p-2 mx-2" id="deepSubmit">Submit</button>
+            <button type="reset" class="btn btn-danger p-2 mx-2" id="deepReset">Cancel</button>
+          </div>
+        </form>
+        <form id="shiningReview">
+          <div class="form-group">
+            <label>Enter Your name</label>
+            <input type="text" class="form-control" id="shiningNameComment" placeholder="Enter Name">
+            <small class="form-text text-muted">Nicknames and Pen Names also allowed</small>
+          </div>
+          <div class="form-group">
+            <label>Type your Review/Comment</label>
+            <textarea class="form-control" id="shiningReviewComment" rows="3" maxlength="300" placeholder="Enter Review/Comment (max 300 characters)" required></textarea>
+          </div>
+          <div class=" text-center">
+            <button type="submit" class="btn btn-success p-2 mx-2" id="shiningSubmit">Submit</button>
+            <button type="reset" class="btn btn-danger p-2 mx-2" id="shiningReset">Cancel</button>
           </div>
         </form>
       </div>
@@ -94,9 +139,9 @@
       
       <div class="card m-1">
         <div class="content">
-          <div class="title">
+          <div class="title my-1">
             Andrew Mathenge</div>
-          <div class="sub-title">
+          <div class="card-title">
             Book Title
           </div>
           <p class="limit">Oh! My, Spy work was dope! The author never fails to surprise, esp the part where the
