hiding of horror section forms done

--- a/books.html
+++ b/books.html
@@ -17,7 +17,7 @@
   <div class=" container bg-info my-3">
 
     <section class="horror mt-3">
-
+      <h2 class=" text-capitalize">horror books</h2>
       <div class="card-deck">
         <div class="card">
           <img src="img/horror/craven-manor.jpg" class="card-img-top" alt="Craven Manor"
@@ -137,7 +137,7 @@
 
     <div class="d-flex flex-wrap text-center revWrite">
       
-      <div class="card m-1">
+      <div class="card m-1 mathenge">
         <div class="content">
           <div class="title my-1">
             Andrew Mathenge</div>
